[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/posepal/nodepath_reference_popup/NodepathItem.gd" type="Script" id=1]

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 147, 236, 0, 105, 147, 236, 0, 104, 146, 234, 0, 104, 146, 235, 0, 85, 127, 212, 0, 0, 0, 0, 0, 105, 147, 236, 0, 105, 147, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 147, 236, 0, 105, 147, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 234, 229, 104, 146, 235, 134, 85, 127, 212, 6, 95, 137, 224, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 0, 0, 0, 0, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 235, 132, 104, 146, 235, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 0, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 235, 0, 104, 146, 235, 0, 85, 127, 212, 0, 105, 147, 236, 255, 105, 147, 236, 255, 102, 145, 233, 70, 105, 147, 236, 255, 104, 146, 235, 225, 104, 146, 235, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 234, 229, 104, 146, 235, 134, 85, 127, 212, 6, 105, 147, 236, 255, 105, 147, 236, 255, 102, 145, 233, 70, 105, 147, 236, 255, 104, 146, 235, 225, 104, 146, 235, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 235, 132, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 103, 145, 235, 133, 104, 146, 235, 0, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 235, 0, 105, 147, 236, 0, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 102, 145, 233, 70, 105, 147, 236, 255, 104, 146, 235, 225, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 234, 229, 103, 145, 234, 135, 72, 145, 218, 7, 88, 145, 226, 0, 104, 146, 235, 230, 105, 147, 236, 255, 102, 145, 233, 70, 103, 146, 234, 0, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 235, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 104, 146, 235, 0, 103, 145, 234, 0, 72, 145, 218, 0, 104, 146, 235, 0, 104, 146, 235, 134, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 72, 145, 218, 0, 72, 145, 218, 7, 103, 145, 234, 135, 104, 146, 234, 229, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 255, 105, 147, 236, 255, 105, 147, 236, 0, 105, 147, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 72, 145, 218, 0, 103, 145, 234, 0, 104, 146, 234, 0, 105, 147, 236, 0, 0, 0, 0, 0, 105, 147, 236, 0, 105, 147, 236, 0, 0, 0, 0, 0, 105, 147, 236, 0, 105, 147, 236, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 0
flags = 0
image = SubResource( 6 )
size = Vector2( 16, 12 )

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.662745, 0.662745, 0.662745, 1 )
vertical = true

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 165, 239, 172, 0, 165, 239, 172, 255, 163, 238, 171, 125, 164, 238, 171, 0, 164, 238, 171, 0, 163, 238, 171, 125, 165, 239, 172, 255, 165, 239, 172, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 164, 238, 170, 124, 164, 238, 170, 124, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 164, 238, 171, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 164, 238, 171, 0, 0, 0, 0, 0, 164, 238, 171, 0, 164, 238, 171, 180, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 164, 238, 171, 180, 164, 238, 171, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 0, 164, 238, 171, 0, 164, 238, 171, 180, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 165, 239, 172, 255, 164, 238, 171, 180, 164, 238, 171, 0, 0, 0, 0, 0, 164, 238, 171, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 165, 239, 172, 0, 164, 238, 171, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 0
flags = 0
image = SubResource( 7 )
size = Vector2( 16, 16 )

[node name="NodepathItem" type="PanelContainer"]
margin_right = 409.0
margin_bottom = 28.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 402.0
margin_bottom = 21.0
rect_min_size = Vector2( 96, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NodeIcon" type="TextureRect" parent="HBox"]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
texture = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="OldPathLabel" type="Label" parent="HBox"]
margin_left = 18.0
margin_right = 191.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_horizontal = 3
text = "Torso/Arm"
valign = 1
clip_text = true

[node name="VSeparator" type="VSeparator" parent="HBox"]
margin_left = 195.0
margin_right = 199.0
margin_bottom = 14.0
custom_styles/separator = SubResource( 1 )

[node name="PathLabel" type="Label" parent="HBox"]
margin_left = 203.0
margin_right = 377.0
margin_bottom = 14.0
grow_horizontal = 0
mouse_filter = 1
size_flags_horizontal = 3
text = "Torso/ArmTop/ArmBottom"
align = 3
valign = 1
clip_text = true

[node name="SelectButton" type="TextureButton" parent="HBox"]
margin_left = 381.0
margin_right = 395.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 0 )
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 5
